# Minesweeping

./: AfterBuild.bat  CMakeLists.txt  README.md
Headers/: Map.hpp  Parse.hpp  Setting.hpp
Output/: config.txt
Sources/: main.cpp
